src/snapshots/tat__tat__test__render_main_menu-10.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬ Layer Information ────────┬ Preview Table ─────────────────────────────────────────┤"
"│point        │- Name: nogeom             │          │                                             │"
"│line         │- Feature Count: 60        │Feature   │json_field                                   │"
"│polygon      │- Fields (9):              │1         │{"another_key":"another_value"…              │"
"│multipolygon │    "text_field" - (String)│2         │{"another_key":"another_value"…              │"
"│nogeom       │    "i32_field" - (Integer)│3         │{"another_key":"another_value"…              │"
"│             │    "i64_field" - (Integer6│4         │{"another_key":"another_value"…              │"
"│             │    "decimal_field" - (Real│5         │{"another_key":"another_value"…              │"
"│             │    "date_field" - (Date)  │6         │{"another_key":"another_value"…              │"
"│             │    "datetime_field" - (Dat│7         │{"another_key":"another_value"…              │"
"│             │    "bool_field" - (Integer│8         │{"another_key":"another_value"…              │"
"│             │    "blob_field" - (Binary)│9         │{"another_key":"another_value"…              │"
"│             │    "json_field" - (String)│10        │{"another_key":"another_value"…              │"
"│             │                           │11        │{"another_key":"another_value"…              │"
"│             │                           │12        │{"another_key":"another_value"…              │"
"│             │                           │13        │{"another_key":"another_value"…              │"
"│             │                           │14        │{"another_key":"another_value"…              │"
"│             │                           │15        │{"another_key":"another_value"…              │"
"│             │                           │16        │{"another_key":"another_value"…              │"
"│             │                           │17        │{"another_key":"another_value"…              │"
"│             │                           │18        │{"another_key":"another_value"…              │"
"│             │                           │19        │{"another_key":"another_value"…              │"
"│             │                           │20        │{"another_key":"another_value"…              │"
"│             │                           │21        │{"another_key":"another_value"…              │"
"│             │                           │22        │{"another_key":"another_value"…              │"
"│             │                           │23        │{"another_key":"another_value"…              │"
"│             │                           │24        │{"another_key":"another_value"…              │"
"│             │                           │25        │{"another_key":"another_value"…              │"
"│             │                           │26        │{"another_key":"another_value"…              │"
"│             │                           │27        │{"another_key":"another_value"…              │"
"│             │                           │28        │{"another_key":"another_value"…              │"
"│             │                           │29        │{"another_key":"another_value"…              │"
"│             │◄█████████████████████════►│30        │{"another_key":"another_value"…              │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
