src/snapshots/tat__tat__test__render_main_menu-15.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬ Layer Information ────────┬ Preview Table ─────────────────────────────────────────┤"
"│point        │: nogeom                   │          │                                             │"
"│line         │ure Count: 60              │Feature   │text_field                                   │"
"│polygon      │ds (9):                    │1         │text                                         │"
"│multipolygon │ext_field" - (String)      │2         │buzz                                         │"
"│nogeom       │32_field" - (Integer)      │3         │check                                        │"
"│             │64_field" - (Integer64)    │4         │die                                          │"
"│             │ecimal_field" - (Real)     │5         │participate                                  │"
"│             │ate_field" - (Date)        │6         │huge                                         │"
"│             │atetime_field" - (DateTime)│7         │read                                         │"
"│             │ool_field" - (Integer)     │8         │check                                        │"
"│             │lob_field" - (Binary)      │9         │strive                                       │"
"│             │son_field" - (String)      │10        │strive                                       │"
"│             │                           │11        │fall                                         │"
"│             │                           │12        │participate                                  │"
"│             │                           │13        │study                                        │"
"│             │                           │14        │respect                                      │"
"│             │                           │15        │die                                          │"
"│             │                           │16        │verify                                       │"
"│             │                           │17        │study                                        │"
"│             │                           │18        │verify                                       │"
"│             │                           │19        │verify                                       │"
"│             │                           │20        │murky                                        │"
"│             │                           │21        │arrest                                       │"
"│             │                           │22        │participate                                  │"
"│             │                           │23        │loving                                       │"
"│             │                           │24        │breath                                       │"
"│             │                           │25        │breath                                       │"
"│             │                           │26        │read                                         │"
"│             │                           │27        │breath                                       │"
"│             │                           │28        │participate                                  │"
"│             │                           │29        │tremble                                      │"
"│             │◄════█████████████████████►│30        │study                                        │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
