src/snapshots/tat__tat__test__render_main_menu-18.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬                                                                      ──────────────┤"
"│point        │ ╭────────────────────────────── Help ──────────────────────────────╮               │"
"│line         │ │---------------------                                            ▲│               │"
"│polygon      │ │asic Navigation:                                                 ║│               │"
"│multipolygon │ │    or 'h': Left                                                █│               │"
"│nogeom       │ │    or 'j': Down                                                █│               │"
"│             │ │    or 'k': Up                                                  █│               │"
"│             │ │    or 'l': Right                                               █│               │"
"│             │ │   Enter: Open Table                                             █│               │"
"│             │ │   Tab and SHIFT+Tab: Move between sections                      █│               │"
"│             │ │                                                                 █│               │"
"│             │ │eneral:                                                          █│               │"
"│             │ │   'q': Previous Menu                                            █│               │"
"│             │ │   CTRL + Q or 'q' when in Main Menu: Quit                       █│               │"
"│             │ │   '?': Show Help                                                █│               │"
"│             │ │                                                                 █│               │"
"│             │ │dvanced Navigation:                                              █│               │"
"│             │ │   'g': Scroll to Top                                            █│               │"
"│             │ │   'G': Scroll to Bottom                                         █│               │"
"│             │ │   CTRL + D: Scroll Down (half page)                             █│               │"
"│             │ │   CTRL + U: Scroll Up (half page)                               █│               │"
"│             │ │   CTRL + F or PageDown: Scroll Down (full page)                 ║│               │"
"│             │ │   CTRL + B or PageUp: Scroll Up (full page)                     ║│               │"
"│             │ │                                                                 ║│               │"
"│             │ │iscellaneous:                                                    ║│               │"
"│             │ │ ◄═██████████████████████████████████████████████████═══════════►▼│               │"
"│             │ ╰─────────────────────── <press q to close> ───────────────────────╯               │"
"│             │                                                                                    │"
"│             │                           │26        │read                                         │"
"│             │                           │27        │breath                                       │"
"│             │                           │28        │participate                                  │"
"│             │                           │29        │tremble                                      │"
"│             │◄█████████████████████════►│30        │study                                        │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
