src/snapshots/tat__tat__test__render_main_menu-4.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬                                                                      ──────────────┤"
"│point        │ ╭────────────────────────────── Help ──────────────────────────────╮               │"
"│line         │ │Keybinds for Main Menu                                           ▲│               │"
"│polygon      │ │----------------------                                           █│               │"
"│multipolygon │ │Basic Navigation:                                                █│               │"
"│nogeom       │ │     or 'h': Left                                               █│               │"
"│             │ │     or 'j': Down                                               █│               │"
"│             │ │     or 'k': Up                                                 █│               │"
"│             │ │     or 'l': Right                                              █│               │"
"│             │ │    Enter: Open Table                                            █│               │"
"│             │ │    Tab and SHIFT+Tab: Move between sections                     █│               │"
"│             │ │                                                                 █│               │"
"│             │ │General:                                                         █│               │"
"│             │ │    'q': Previous Menu                                           █│               │"
"│             │ │    CTRL + Q or 'q' when in Main Menu: Quit                      █│               │"
"│             │ │    '?': Show Help                                               █│               │"
"│             │ │                                                                 █│               │"
"│             │ │Advanced Navigation:                                             █│               │"
"│             │ │    'g': Scroll to Top                                           █│               │"
"│             │ │    'G': Scroll to Bottom                                        █│               │"
"│             │ │    CTRL + D: Scroll Down (half page)                            ║│               │"
"│             │ │    CTRL + U: Scroll Up (half page)                              ║│               │"
"│             │ │    CTRL + F or PageDown: Scroll Down (full page)                ║│               │"
"│             │ │    CTRL + B or PageUp: Scroll Up (full page)                    ║│               │"
"│             │ │                                                                 ║│               │"
"│             │ │M◄██████████████████████████████████████████████████════════════►▼│               │"
"│             │ ╰─────────────────────── <press q to close> ───────────────────────╯               │"
"│             │                                                                                    │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │◄══████████████████═══════►│          │                                             │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
